[package]
name = "rflow"
version = "0.1.0"
edition = "2021"

# This is for the mnist example
# [[bin]]
# name = "nn"
# path= "src/main.rs"

[dependencies]
rand = "0.9.1"
rand_distr = "0.5.1"

# Uncomment if you want to try the MNIST example yourself
# indicatif = "0.17.11"
# polars = { version = "0.46.0", features = ["csv"] }